--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <footer>
     <div class="Parent3">
     <div> It cost only 5$ to give children clean water for 200 days!</div>
-    <div> How to help</div>
+    <div> How to help?</div>
     </div>
    </footer>
   </body>
